tests/invalid/output-field-drift.pkl
/// Invariant 5 (publication discipline): an output field whose name
/// does not match its wire name (`outX` <-> output("x")) fails eval —
/// navigation surface and runtime name may not drift.
module tests.invalid.outputFieldDrift

extends "../../core/template.pkl"

import "../../core/resource.pkl"
import "../../core/host.pkl"
import "../../core/job.pkl"
import "../../core/action.pkl"
import "../../core/values.pkl"
import "../support/testkit.pkl"

/// Plugin-author mistake: field `sum` claims wire name "digest".
class BrokenOutputs extends action.Outputs {
  sum: values.RuntimeRef
}

class BrokenAction extends testkit.TestAction {
  outputs: BrokenOutputs = let (o = mkOutput) new {
    sum = o.apply("digest")
  }
}

res: resource.EphemeralResource = new {
  name = "res"
  provider = new testkit.TestProvider { provides { "bash" } }
}

h: host.Host = new { name = "h"; backedBy = res }

j: job.Job = new {
  name = "j"
  runsOn = h
  actions {
    new BrokenAction { name = "p"; requires { "bash" } }
  }
}

wf {
  name = "bad"
  resources { res }
  hosts { h }
  jobs { j }
}
